Setup web sockets

--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "A turn-based strategy game based on the Civilization game series",
   "main": "index.js",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
-    "url": "TODO"
+    "url": "https://github.com/kjniemela/CivCloneJS"
   },
-  "author": "Heine574",
+  "author": "kjniemela",
   "license": "ISC",
   "dependencies": {
     "@pixi/graphics-extras": "^6.2.1",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "ws": "^8.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
