--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A turn-based strategy game based on the Civilization game series",
   "main": "index.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon server"
+    "start": "node dist/server",
+    "dev": "nodemon dist/server",
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,9 @@
     "ws": "^8.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@types/node": "^17.0.23",
+    "@types/ws": "^8.5.3",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.6.3"
   }
 }
