--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ws": "^8.5.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
     "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
