--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "eslint": "^8.12.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.6.3"
+  },
+  "nodemonConfig": {
+    "ignore": ["dist/server/saves/**"]
   }
 }
