--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "typescript": "^4.6.3"
   },
   "nodemonConfig": {
-    "ignore": ["dist/server/saves/**"]
+    "ignore": ["server/dist/saves/**"]
   }
 }
